Added sprite map for perks

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,59 @@
     </script>
   </head>
   <body>
+
     <perks>Loading...</perks>
   </body>
+
+  <style type="text/css">
+    .perk_chart {
+      background: url('/assets/perks.png') 0 0;
+      width: 1597px;
+      height: 2299px;
+    }
+
+    #strength {
+      background: url('/assets/perks.png') no-repeat -75px -96px;
+      width: 129px;
+      height: 144px;
+    }
+
+    #perception {
+      background: url('/assets/perks.png') no-repeat -242px -76px;
+      width: 211px;
+      height: 165px;
+    }
+
+    #endurance {
+      background: url('/assets/perks.png') no-repeat -485px -94px;
+      width: 154px;
+      height: 144px;
+    }
+
+    #charisma {
+      background: url('/assets/perks.png') no-repeat -712px -102px;
+      width: 114px;
+      height: 140px;
+    }
+
+    #intelligence {
+      background: url('/assets/perks.png') no-repeat -932px -84px;
+      width: 198px;
+      height: 169px;
+    }
+
+    #agility {
+      background: url('/assets/perks.png') no-repeat -1144px -104px;
+      width: 163px;
+      height: 134px;
+    }
+
+    #luck {
+      background: url('/assets/perks.png') no-repeat -1385px -92px;
+      width: 177px;
+      height: 156px;
+    }
+
+
+  </style>
 </html>
