Add link back to website

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,13 @@
         <h1>Fallout 4 Interactive S.P.E.C.I.A.L. Chart</h1>
       </div>
     </div>
+
     <div class="row">
       <perks>Loading...</perks>
     </div>
+
     <div class="row">
-      <div class="column">
+      <div class="column small-4 small-centered" id="attributions">
         Attributions:
         <ul>
           <li>http://www.spritecow.com</li>
@@ -37,8 +39,11 @@
         </ul>
       </div>
     </div>
-    <div>
-      Created by Ben Simpson
+
+    <div class="row">
+      <span class="column small-12" id="created">
+        <a href="http://mrfrosti.com" class="expanded button">Created by Ben Simpson</a>
+      </span>
     </div>
 
     <script src="/assets/js/vendor/jquery.min.js"></script>
