Add accordion description
Show all perks

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,6 @@
 
     <div class="row">
       <div class="column small-4 small-centered" id="attributions">
-        Attributions:
         <ul>
           <li>http://www.spritecow.com</li>
           <li>http://foundation.zurb.com</li>
@@ -40,7 +39,7 @@
     </div>
 
     <div class="row">
-      <span class="column small-12" id="created">
+      <span class="column small-12 small-centered" id="created">
         <a href="http://mrfrosti.com" class="expanded button">Created by Ben Simpson</a>
       </span>
     </div>
