Rename project title

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fallout 4 Interactive S.P.E.C.I.A.L. Chart</title>
+    <title>S.P.E.C.I.A.L.</title>
     <link rel="stylesheet" href="/assets/css/foundation.css" />
     <link rel="stylesheet" href="/assets/css/app.css" />
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
@@ -19,7 +19,7 @@
   <body>
     <div class="row">
       <div class="column title">
-        <h1>Fallout 4 Interactive S.P.E.C.I.A.L. Chart</h1>
+        <h1>S.P.E.C.I.A.L.</h1>
       </div>
     </div>
 
