--- a/src/perks.template.html
+++ b/src/perks.template.html
@@ -2,7 +2,14 @@
   <div class="column small-6 small-left">
     <div class="row small-up-1 medium-up-2">
       <div class="column">
-        <div class="perk"></div>
+        <div class="perk">
+          <p>
+            <em>Hi there! You've found an interactive Fallout 4 SPECIAL chart.</em>
+          </p>
+          <p>
+            <em>To get started, change your character level, and assign your PERK points</em>
+          </p>
+        </div>
         <label>Character Level
           <input type="number" [(ng-model)]="filter.character_level" />
         </label>
